# claude-agent-orchestrator

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  ClaudeAgentSDK-Hooks-Research.md  DOCKER.md  LICENSE  Makefile  README.md  REFACTOR-ENV-VARS.md  REFACTOR_VALIDATION.md  TESTING.md  docker-compose.override.yml.template  docker-compose.quickstart.yml  docker-compose.yml  implementation_01_runtime_to_coordinator.md  implementation_02_jobs_to_runs.md  implementation_03_launcher_to_runner.md  invalid.json  package-lock.json  package.json  terminology.md  terminology_agent_launcher_renaming.md  terminology_agent_runtime_renaming.md  terminology_jobs_renaming.md  valid.json
agent-orchestrator-backend/: Dockerfile  README.md  agent_storage.py  main.py  models.py  pyproject.toml
agent-orchestrator-mcp-python/: .env.example  ARCHITECTURE.md  ENV_VARS.md  GETTING_STARTED.md  INTEGRATION_SCENARIOS.md  README.md  SETUP_GUIDE.md  TROUBLESHOOTING.md  pyproject.toml
agent-orchestrator-mcp-python/docs/: INTEGRATION_SCENARIOS.md  TOOLS_REFERENCE.md  TROUBLESHOOTING.md
agent-orchestrator-mcp-python/libs/: schemas.py  server.py  utils.py
agent-orchestrator-mcp-python/src/agent_orchestrator_mcp/: __init__.py  __main__.py  constants.py  schemas.py  utils.py
agent-orchestrator-observability/: PLAN.md  README.md  docker-compose.yml  pyproject.toml
agent-orchestrator-observability/backend/: database.py  main.py  models.py
agent-orchestrator-observability/docs/: BACKEND_API.md  DATABASE_SCHEMA.md  DATA_MODELS.md  DEBUG_HOOK_INPUT.md  DOCKER.md  FRONTEND_API.md  HOOKS_API.md  HOOKS_SETUP.md  USAGE.md  hooks.example.json
agent-orchestrator-observability/frontend/: index.html  package.json
agent-orchestrator-observability/frontend/src/: App.tsx  styles.css  vite-env.d.ts
agent-orchestrator-observability/hooks/: post_tool_hook.py  pre_tool_hook.py  stop_hook.py  user_prompt_submit_hook.py
plugins/document-sync/document-server/: .dockerignore  pyproject.toml
servers/agent-coordinator/: Dockerfile  README.md  agent_storage.py  auth.py  capability_storage.py  database.py  main.py  mcp_server_storage.py  models.py  openapi_config.py  pyproject.toml  script_storage.py  validation.py
servers/agent-coordinator/services/: __init__.py  callback_processor.py  hook_executor.py  mcp_registry.py  placeholder_resolver.py  run_demands.py  run_queue.py  runner_registry.py  script_sync_queue.py  sse_manager.py  stop_command_queue.py
servers/agent-coordinator/tests/: conftest.py  test_mcp_registry.py  test_placeholder_resolver.py
servers/agent-registry/: README.md  main.py  models.py  pyproject.toml
servers/agent-runner/: README.md  agent-runner  pyproject.toml
servers/agent-runner/docker/: .dockerignore  .env.template  .gitignore  Dockerfile  README.md  docker-compose.yml
servers/agent-runner/docs/: runner-gateway-api.md
servers/agent-runner/executors/: README.md
servers/agent-runner/lib/: __init__.py  agent_api.py  api_client.py  auth0_client.py  blueprint_resolver.py  config.py  coordinator_proxy.py  executor.py  executor_config.py  invocation.py  poller.py  registry.py  runner_gateway.py  session_client.py  supervisor.py  utils.py
servers/agent-runner/profiles/: PROFILES.md  claude-agent-sdk.json  claude-code.json  claude-sdk-executor.json  echo-executor.json  full-access-isolated-best.json  full-access-project-best.json  full-access-project-quick.json  restricted-project-best.json  test-executor.json  test-procedural.json
servers/agent-runner/tests/: README.md  conftest.py  test_api_client.py  test_executor.py  test_invocation.py  test_poller.py  test_registry.py  test_runner_gateway.py  test_supervisor.py
servers/agent-runtime/: Dockerfile  README.md  agent_storage.py  database.py  main.py  models.py  pyproject.toml  validation.py
servers/agent-runtime/services/: __init__.py  callback_processor.py  job_queue.py  launcher_registry.py
servers/context-store/: Dockerfile  README.md  docker-compose.yml  docker-entrypoint.sh  pyproject.toml
servers/context-store/docs/: ADR-001-relation-api-naming.md  architecture-context-store-relations.md  architecture-document-write-api.md  (+2 more)
(+1336 files in other folders)
