[project]
name = "agent-orchestrator-mcp-python"
version = "1.0.0"
description = "MCP server for Agent Orchestrator - enables orchestration of specialized Claude Code agents"
requires-python = ">=3.10"
dependencies = [
    "mcp>=1.7.0",
    "pydantic>=2.0.0",
]

[project.scripts]
agent-orchestrator-mcp-server = "agent_orchestrator_mcp.__main__:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/agent_orchestrator_mcp"]
