[project]
name = "agent-runtime"
version = "0.2.0"
description = "Unified Agent Runtime server for session management, real-time observability, and agent blueprint registry"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "pydantic>=2.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["."]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
